--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <script type="application/x-javascript">
 	
 	
+	
 	 addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
+
 
 
 </script>
@@ -107,9 +109,9 @@
 			</nav>
 			<div class="header-info">
 				<div class="header-right login">
-					<a href="#" id="user" style="right:150px;position: absolute;"><span class="glyphicon glyphicon-user"
-						aria-hidden="true"></span></a>
-					<div id="loginBox" style="right:130px;top:54px;">                
+					<a href="#" id="user" style="right: 150px; position: absolute;"><span
+						class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+					<div id="loginBox" style="right: 130px; top: 54px;">
 						<form id="loginForm">
 							<fieldset id="body">
 								<fieldset>
@@ -133,9 +135,9 @@
 					</div>
 				</div>
 				<div class="header-right cart">
-					<a href="#" style="right:100px;position: absolute;"><span class="glyphicon glyphicon-shopping-cart"
-						aria-hidden="true"></span></a>
-					<div class="cart-box" style="right: 75px;top:54px;">
+					<a href="#" style="right: 100px; position: absolute;"><span
+						class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+					<div class="cart-box" style="right: 75px; top: 54px;">
 						<h4>
 							<a href="checkout.html"> <span class="simpleCart_total">
 									$0.00 </span> (<span id="simpleCart_quantity"
