--- a/single.html
+++ b/single.html
@@ -8,13 +8,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
 <script type="application/x-javascript">
+	
 	 addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
+
 </script>
 <!-- //Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet"
 	media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/account.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/account.css" type="text/css" rel="stylesheet"
+	media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -119,39 +122,51 @@
 				</div>
 				<!--//navbar-header-->
 			</nav>
-            <div class="header-info">
-                <div class="header-right login">
-                    <a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
-                    <div id="loginBox" style="right:16%;">
-                        <form id="loginForm">
-                            <fieldset id="body">
-                                <fieldset>
-                                    <label for="email">Email Address</label>
-                                    <input type="text" name="email" id="email">
-                                        </fieldset>
-                                <fieldset>
-                                    <label for="password">Password</label>
-                                    <input type="password" name="password" id="password">
-                                        </fieldset>
-                                <input type="submit" id="login" value="Sign in">
-                                    <label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
-                                    </fieldset>
-                            <p>New User ? <a class="sign" href="account.html">Sign Up</a> <span><a href="#">Forgot your password?</a></span></p>
-                        </form>
-                    </div>
-                </div>
-                <div class="header-right cart">
-                    <a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                    <div class="cart-box" style="right:10.5%;">
-                        <h4><a href="checkout.html">
-                            <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>) 
-                        </a></h4>
-                        <p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
+			<div class="header-info">
+				<div class="header-right login">
+					<a href="#" id="user" style="right: 150px; position: absolute;"><span
+						class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+					<div id="loginBox" style="right: 130px; top: 54px;">
+						<form id="loginForm">
+							<fieldset id="body">
+								<fieldset>
+									<label for="email">Email Address</label> <input type="text"
+										name="email" id="email">
+								</fieldset>
+								<fieldset>
+									<label for="password">Password</label> <input type="password"
+										name="password" id="password">
+								</fieldset>
+								<input type="button" id="login" value="Sign in"
+									onClick="Login()"> <label for="checkbox"><input
+									type="checkbox" id="checkbox"> <i>Remember me</i><a
+									id=msg></a></label>
+							</fieldset>
+							<p>
+								New User ? <a class="sign" href="account.html">Sign Up</a> <span><a
+									href="#">Forgot your password?</a></span>
+							</p>
+						</form>
+					</div>
+				</div>
+				<div class="header-right cart">
+					<a href="#" style="right: 100px; position: absolute;"><span
+						class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+					<div class="cart-box" style="right: 75px; top: 54px;">
+						<h4>
+							<a href="checkout.html"> <span class="simpleCart_total">
+									$0.00 </span> (<span id="simpleCart_quantity"
+								class="simpleCart_quantity"> 0 </span>)
+							</a>
+						</h4>
+						<p>
+							<a href="javascript:;" class="simpleCart_empty">Empty cart</a>
+						</p>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+				<div class="clearfix"></div>
+			</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
@@ -475,13 +490,15 @@
 	<div class="footer">
 		<div class="container">
 			<table style="width: 100%">
-					<tr>
+				<tr>
 					<td style="width: 25%"></td>
-					<td style="width: 25%" class="faqa"><a href="support.html"  style="float:left;">帮助</a></td>
-					<td style="width: 25%" class="faqa"><a href="FAQ.html" style="float:right;">FAQ</a></td>
+					<td style="width: 25%" class="faqa"><a href="support.html"
+						style="float: left;">帮助</a></td>
+					<td style="width: 25%" class="faqa"><a href="FAQ.html"
+						style="float: right;">FAQ</a></td>
 					<td style="width: 25%"></td>
-					</tr>
-				</table>	
+				</tr>
+			</table>
 		</div>
 	</div>
 	</div>
@@ -492,4 +509,6 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="js/Login.js"></script>
+<script type="text/javascript" src="js/Logout.js"></script>
 </html>
